# python-casacore

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.rst  README.txt  SConstruct  Vagrantfile  batchbuild-trunk.py  batchbuild.py  casacore_fitting.html  casacore_functionals.html  casacore_images.html  casacore_measures.html  casacore_quanta.html  casacore_tables.html  casacore_util.html  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  pyproject.toml  pyrap_fitting.rst  pyrap_functionals.rst  pyrap_images.rst  pyrap_measures.rst  pyrap_quanta.rst  pyrap_tables.rst  pyrap_util.rst  requirements.txt  search.html  searchindex.js  setup.py  test_requirements.txt
.github/workflows/: build_release.yml  extract-wheels.sh  linux.yml  mypy.docker  osx.yml  osx_script.sh  pep8.docker  py2_casacore_master.docker  py2_casacore_v3.3.docker  py2_casacore_v3.4.docker  py2_kern6.docker  py310_binary_wheel.docker  py311_binary_wheel.docker  py36_binary_wheel.docker  py37_binary_wheel.docker  py38_binary_wheel.docker  py39_binary_wheel.docker  py3_casacore_master.docker  py3_casacore_v3.3.docker  py3_casacore_v3.4.docker  py3_kern6.docker  py3_kern7.docker  wheels.yml
.travis/: Dockerfile  before_install.sh  casacore_wheel.patch  install.sh  mypy.docker  pep8.docker  py2-kern.docker  py2.docker  py2_casacore_master.docker  py2_casacore_v3.1.docker  py2_casacore_v3.2.docker  py3-kern.docker  py3.docker  py3_casacore_master.docker  py3_casacore_v3.1.docker  py3_casacore_v3.2.docker  script.sh  wheel.docker  wheel34.docker  wheel36.docker
_sources/: casacore_fitting.txt  casacore_functionals.txt  casacore_util.txt  index.txt
casacore/: .aipsrc  __init__.py  six.py
casacore/fitting/: __init__.py  fitting.py
casacore/functionals/: __init__.py  functional.py
casacore/images/: __init__.py  coordinates.py  image.py
casacore/measures/: __init__.py
casacore/quanta/: __init__.py  quantity.py
casacore/tables/: __init__.py  msutil.py  table.py  tablecolumn.py  tablehelper.py  tableindex.py  tableiter.py  tablerow.py  tableutil.py  wxtablebrowser.py
casacore/util/: __init__.py  substitute.py
cmake/: FindCasacore.cmake
doc/: 199.html  259.css  259.html  259.latex  casacore.tex  casacore_images.rst  casacore_measures.rst  casacore_quanta.rst  casacore_tables.rst  casacore_util.rst  conf.py  index.rst  pyrap.tex  pyrap_fitting.rst  pyrap_functionals.rst  pyrap_quanta.rst  requirements.txt
libpyrap/: current
libpyrap/tags/pyrap-0.3.0/: SConstruct
libpyrap/tags/pyrap-1.4.0/: SConstruct
libpyrap/trunk/: SConstruct
libpyrap/trunk/pyrap/: Converters.h  SConscript
libpyrap/trunk/scons-tools/: assaytest.py  floatcheck  utils.py
manylinux2010/: build.sh  wheel27.docker  wheel34.docker  wheel35.docker  wheel36.docker  wheel37.docker  wheel38.docker
pyrap/: SConscript  __init__.py  fitting.py  functionals.py  measures.py  ms.py  quanta.py  tables.py  util.py
pyrap/Converters/: PycArray.h  PycArrayComCC.h  PycArrayComH.h  PycArrayNA.cc  PycArrayNA.h  PycArrayNP.cc  PycArrayNP.h  PycBasicData.h  PycRecord.h  PycValueHolder.h
pyrap/images/: __init__.py  coordinates.py  image.py
pyrap_fitting/: current  setup.cfg
pyrap_fitting/tags/pyrap_fitting-0.1.0/: setup.cfg  setup.py
pyrap_fitting/tags/pyrap_fitting-0.2.0/: setup.py
pyrap_fitting/trunk/: setup.py  setupext.py
pyrap_fitting/trunk/pyrap_fitting/: fitting.py
pyrap_fitting/trunk/src/: fitting.cc
pyrap_functionals/: current  setup.py
pyrap_functionals/pyrap_functionals/: __init__.py
pyrap_functionals/tags/pyrap_functionals-0.1.0/: setup.cfg  setup.py
pyrap_functionals/tags/pyrap_functionals-0.2.0/: setup.cfg  setup.py
pyrap_functionals/tags/pyrap_functionals-0.2.1/: setup.py
pyrap_functionals/trunk/: MANIFEST.in  setup.cfg  setup.py  setupext.py
pyrap_functionals/trunk/pyrap_functionals/: functional.py
pyrap_functionals/trunk/src/: functional.cc  functionals.cc
pyrap_images/: current
pyrap_images/tags/pyrap_images-0.1.0/: setup.cfg  setup.py  setupext.py
pyrap_images/tags/pyrap_images-0.1.1/: setup.py  setupext.py
pyrap_images/trunk/: setup.cfg  setup.py  setupext.py
pyrap_images/trunk/src/: images.cc  pyimages.cc  pyimages.h
pyrap_images/trunk/tests/: timage.py  timage.py.out
pyrap_measures/: current  setup.py  setupext.py
pyrap_measures/pyrap_measures/: __init__.py
pyrap_measures/src/: pymeasures.h
pyrap_measures/tags/pyrap_measures-0.1.0/: setup.py
pyrap_measures/tags/pyrap_measures-0.2.0/: setup.py
pyrap_measures/tags/pyrap_measures-0.2.1/: setup.py
pyrap_measures/trunk/: setup.py  setupext.py
pyrap_quanta/: current  setup.cfg  setupext.py
pyrap_quanta/pyrap_quanta/: __init__.py  quantity.py
pyrap_quanta/src/: quanta.cc  quanta.h  quantamath.cc  quantity.cc
pyrap_quanta/tags/pyrap_quanta-0.1.0/: setup.py
pyrap_quanta/trunk/: setup.cfg  setup.py  setupext.py
pyrap_quanta/trunk/pyrap_quanta/: __init__.py  (+1 more)
pyrap_tables/: current  setup.cfg  setup.py  setupext.py
pyrap_tables/pyrap_tables/: tablecolumn.py  tablerow.py
pyrap_tables/trunk/: setup.cfg  setup.py  setupext.py
pyrap_util/: current
pyrap_util/trunk/: MANIFEST.in  setup.py  setupext.py
src/: CMakeLists.txt  fit.cc  fitting.cc  fitting.h  functional.cc  functionals.cc  functionals.h  guards.h  images.cc  ms.cc  ms.h  pyimages.cc  pyimages.h  pymeas.cc  pymeasures.cc  pymeasures.h  pyms.cc  pytable.cc  pytabledesc.cc  pytableindex.cc  pytableiter.cc  pytablerow.cc  quanta.cc  quanta.h  quantamath.cc  quantity.cc  quantvec.cc  tables.cc  tables.h
src/Converters/: PycImport.cc  PycImport.h
src/Converters/test/: tConvert.py.out
tests/: CMakeLists.txt  disable_convert.py  requirements.txt  tConvert.cc  test_convert.py  test_fitting.py  test_funcionals.py  test_functionals.py  test_image.py  test_measures.py  test_quanta.py  test_table.py  test_unicode.py  test_util.py  timage.py.out  tquanta.py.out
tests/test_quanta/: tquanta.py
tests/test_tables/: ttable.py.out
tests/test_util/: tutil.py
vagrant/: provision.sh
(+112 files in other folders)
