[build-system]
requires = [
    "build",
    "cmake>=3.18",
    "oldest-supported-numpy",
    "setuptools",
    "wheel",
]

[tool.cibuildwheel]
# build = "cp3{7,8,9,10,11,12}-*_x86_64"
build = "cp37-*_x86_64"
build-verbosity = 1
environment = """ \
    CFLAGS="-I/usr/include/cfitsio" \
    LD_LIBRARY_PATH=/opt/boost/lib \
"""
test-command = "cd {package}/tests && pytest"
test-requires = "pytest"

[tool.cibuildwheel.macos]
repair-wheel-command = """\
    DYLD_LIBRARY_PATH=${BOOST_INSTALL_DIR}/lib delocate-wheel \
    --require-archs {delocate_archs} -w {dest_dir} -v {wheel}\
"""

[tool.cibuildwheel.linux]
skip = ["*-musllinux_*"]

[[tool.cibuildwheel.overrides]]
select="cp37-*"
manylinux-x86_64-image = "quay.io/casacore/casacore:py37_master"

[[tool.cibuildwheel.overrides]]
select="cp38-*"
manylinux-x86_64-image = "quay.io/casacore/casacore:py38_master"

[[tool.cibuildwheel.overrides]]
select="cp39-*"
manylinux-x86_64-image = "quay.io/casacore/casacore:py39_master"

[[tool.cibuildwheel.overrides]]
select="cp310-*"
manylinux-x86_64-image = "quay.io/casacore/casacore:py310_master"

[[tool.cibuildwheel.overrides]]
select="cp311-*"
manylinux-x86_64-image = "quay.io/casacore/casacore:py311_master"

[[tool.cibuildwheel.overrides]]
select="cp312-*"
manylinux-x86_64-image = "quay.io/casacore/casacore:py312_master"
