#########################
# build-system settings #
#########################

[build-system]
requires = [
    "scikit-build-core>=0.8",
]
build-backend = "scikit_build_core.build"


####################
# project settings #
####################

[project]
name = "python-casacore"
version = "3.5.3"
description = "A wrapper around CASACORE, the radio astronomy library"
keywords = ["pyrap", "casacore", "utilities", "astronomy"]
readme = {file = "README.rst", content-type = "test/x-rst"}
license = {text = "LGPL"}
requires-python = ">=3.7"
dependencies = ["numpy", "six"]

[project.urls]
Homepage = "https://github.com/casacore/python-casacore"


#########################
# cibuildwheel settings #
#########################

[tool.cibuildwheel]
build = "cp3{7,8,9,10,11,12}-*_x86_64"
build-verbosity = 1
environment = """ \
    CXXFLAGS="-I/usr/include/cfitsio" \
"""
test-command = "cd {package}/tests && pytest"
test-requires = "pytest"

[tool.cibuildwheel.macos]
repair-wheel-command = """\
    DYLD_LIBRARY_PATH=${BOOST_INSTALL_DIR}/lib delocate-wheel \
    --require-archs {delocate_archs} -w {dest_dir} -v {wheel}\
"""

[tool.cibuildwheel.linux]
skip = ["*-musllinux_*"]

[[tool.cibuildwheel.overrides]]
select="cp37-*"
manylinux-x86_64-image = "quay.io/casacore/casacore:py37_master"

[[tool.cibuildwheel.overrides]]
select="cp38-*"
manylinux-x86_64-image = "quay.io/casacore/casacore:py38_master"

[[tool.cibuildwheel.overrides]]
select="cp39-*"
manylinux-x86_64-image = "quay.io/casacore/casacore:py39_master"

[[tool.cibuildwheel.overrides]]
select="cp310-*"
manylinux-x86_64-image = "quay.io/casacore/casacore:py310_master"

[[tool.cibuildwheel.overrides]]
select="cp311-*"
manylinux-x86_64-image = "quay.io/casacore/casacore:py311_master"

[[tool.cibuildwheel.overrides]]
select="cp312-*"
manylinux-x86_64-image = "quay.io/casacore/casacore:py312_master"


#########################
# scikit-build settings #
#########################

[tool.scikit-build]
cmake.version = ">=3.15"
ninja.version = ">=1.5"
logging.level = "INFO"
install.components = ["data", "libraries"]
sdist.exclude = [".github", ".gitignore"]
wheel.packages = ["casacore", "pyrap"]

[tool.scikit-build.cmake.define]
BUILD_TESTING = "ON"
